# OpenAEC-style-book

./: .gitignore  CLAUDE.md  README.md  migratie-instructies.md
brandbook/: DESIGN-SYSTEM.md
project-templates/Tauri+React/: package-lock.json  package.json
project-templates/Tauri+React/src/: App.css  App.tsx  themes.css
project-templates/Tauri+React/src-tauri/: Cargo.toml  tauri.conf.json
project-templates/Tauri+React/src-tauri/capabilities/: default.json
project-templates/Tauri+React/src-tauri/src/: lib.rs
project-templates/Tauri+React/src-tauri/src/mcp/: server.rs  tools.rs
project-templates/Tauri+React/src-tauri/src/pdf/: backend.rs  brand.rs  colors.rs  engine.rs  fonts.rs  mod.rs  model.rs  template.rs  tenant.rs  text.rs  titleblock.rs  zones.rs
project-templates/Tauri+React/src-tauri/tenants/openaec_foundation/: brand.yaml
project-templates/Tauri+React/src-tauri/tenants/openaec_foundation/templates/: constructie_rapport.yaml
project-templates/Tauri+React/src/components/: DocumentBar.tsx
project-templates/Tauri+React/src/components/backstage/: Backstage.tsx
project-templates/Tauri+React/src/components/panels/: IfcViewerPanel.css  IfcViewerPanel.tsx  ReportPreview.css  ReportPreview.tsx  ThreeViewer.css  ThreeViewer.tsx
project-templates/Tauri+React/src/components/project/: ProjectSettingsDialog.css  ProjectSettingsDialog.tsx
project-templates/Tauri+React/src/components/ribbon/: ExtensionsTab.tsx  HomeTab.tsx  IfcTab.tsx  ReportTab.tsx  Ribbon.tsx  ViewerTab.tsx  icons.ts
project-templates/Tauri+React/src/stores/: reportStore.ts
project-templates/Tauri+React/src/types/: report.ts
(+13 files in other folders)
